--- a/web/src/css/custom.scss
+++ b/web/src/css/custom.scss
@@ -32,3 +32,19 @@
 .codeBlockContent_node_modules-\@docusaurus-theme-classic-src-theme-CodeBlock- {
   font-size: 80%;
 }
+
+/* shell-session code blocks */
+.codeBlockContent_node_modules-\@docusaurus-theme-classic-src-theme-CodeBlock- {
+  .command {
+    font-weight: bold;
+    color: white;
+  }
+  .command.shell-symbol {
+    color: inherit;
+  }
+  .command.function,
+  .command.number,
+  .command.operator {
+    color: white !important;
+  }
+}
