documentation layout refinements
- make footer consistent between homepage and docs (I don't think it matters that the CTAs point to pages within the docs)
- make sticky nav whitespace consistent between layouts

--- a/web/styles/global.scss
+++ b/web/styles/global.scss
@@ -616,10 +616,7 @@ header {
       position: sticky;
       position: -webkit-sticky;
       top: 0;
-      padding-top: calc(3.3rem + #{$whitespace-vertical});
-      h2 span {
-        margin-top: -3.3rem;
-      }
+      padding-top: $whitespace-vertical;
 
       & > li {
         padding-bottom: $whitespace-vertical;
@@ -722,6 +719,14 @@ header {
       }
     }
   }
+  &.documentation {
+    nav {
+      padding-top: 3.3rem;
+      & > ol {
+        top: $whitespace-vertical*0.5;
+      }
+    }
+  }
 }
 
 
@@ -735,7 +740,7 @@ footer {
   h2 {
     @include font-feature;
     grid-column: 2 / 5;
-    min-height: $grid-row / 2;
+    min-height: $grid-row;
     @include grid-module;
     div:nth-child(1) {
       grid-row: 1 / 2;
@@ -745,7 +750,7 @@ footer {
       grid-row: 1 / 2;
       grid-column: 1 / 2;
       text-align: center;
-      padding-left: 7em;
+      padding-left: 7.75em;
     }
     div:nth-child(3) {
       grid-row: 1 / 2;
