--- a/web/styles/global.scss
+++ b/web/styles/global.scss
@@ -723,13 +723,21 @@ header {
   @include grid-module;
   padding-top: $whitespace-vertical;
   border-bottom: 1px solid $text;
+  overflow: hidden;
   div {
     min-height: calc(#{$grid-row} - #{$whitespace-vertical * 2});
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    z-index: 10;
+    background-repeat: no-repeat;
+    background-position: center center;
+    &:nth-child(1) {
+      background-image: url(../public/svg/icon-1.svg);
+    }
     &:nth-child(2) {
       grid-column: 2 / 5;
+      background-image: url(../public/svg/icon-2.svg);
     }
     @media (max-width: 700px) {
       grid-column: 1 / 4;
