change elipsis to Docs for mobile breadcrumb

--- a/web/styles/global.scss
+++ b/web/styles/global.scss
@@ -595,7 +595,7 @@ header {
       @media (max-width: 700px) {
         & + a {
           &:before {
-            content: "...";
+            content: "Docs";
           }
           span {
             display: none;
