--- a/web/styles/global.scss
+++ b/web/styles/global.scss
@@ -733,7 +733,8 @@ header {
   border-bottom: 1px solid $text;
   overflow: hidden;
   div {
-    min-height: calc(#{$grid-row} - #{$whitespace-vertical * 2});
+    // min-height: calc(#{$grid-row} - #{$whitespace-vertical * 2});
+    margin-bottom: $whitespace-vertical;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -744,7 +745,7 @@ header {
       /*       background-image: url(../public/svg/icon-1.svg); */
     }
     &:nth-child(2) {
-      grid-column: 2 / 5;
+      // grid-column: 2 / 5;
       /*       background-image: url(../public/svg/icon-2.svg); */
     }
     @media (max-width: 700px) {
