--- a/web/styles/fonts.scss
+++ b/web/styles/fonts.scss
@@ -19,6 +19,21 @@ $font-base: "https://fonts.replicate.ai";
 
 @font-face {
   font-family: "basier_square";
+  src: url("#{$font-base}/Basier-Square-bold-webfont/basiersquare-bold-webfont.eot");
+  src: url("#{$font-base}/Basier-Square-bold-webfont/basiersquare-bold-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    url("#{$font-base}/Basier-Square-bold-webfont/basiersquare-bold-webfont.woff2")
+      format("woff2"),
+    url("#{$font-base}/Basier-Square-bold-webfont/basiersquare-bold-webfont.woff")
+      format("woff"),
+    url("#{$font-base}/Basier-Square-bold-webfont/basiersquare-bold-webfont.ttf")
+      format("truetype");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "basier_square";
   src: url("#{$font-base}/Basier-Square-regularitalic-webfont/basiersquare-regularitalic-webfont.eot");
   src: url("#{$font-base}/Basier-Square-regularitalic-webfont/basiersquare-regularitalic-webfont.eot?#iefix")
       format("embedded-opentype"),
