--- a/web/styles/global.scss
+++ b/web/styles/global.scss
@@ -121,6 +121,7 @@ a {
   text-decoration-color: $text-shade;
   text-decoration-thickness: 0.6px;
   text-underline-offset: 0.15em;
+  cursor: pointer;
   &:hover {
     text-decoration-color: $text;
     text-decoration-thickness: 2px;
@@ -431,21 +432,19 @@ h2 span {
 
 .tabs {
   & > div:first-child {
-    @include font-feature;
     margin-top: 2.2em;
     margin-bottom: $whitespace-vertical * 2;
     border-bottom: $keyline;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    @media (max-width: 700px) {
-      @include font-core;
-    }
-    &:after {
-      content: ".";
-      width: 0;
-      overflow: hidden;
-      color: transparent;
+    justify-content: flex-start;
+    @media (max-width: 1000px) {
+      justify-content: space-between;
+      &:after {
+        content: " ";
+        width: 1px;
+        overflow: hidden;
+      }
     }
   }
   div {
@@ -462,11 +461,12 @@ h2 span {
     overflow: visible;
     border: none;
     background: none;
-    padding-right: $whitespace-horizontal;
-    padding-bottom: 0.1em;
-    margin: $whitespace-vertical 0;
-    color: $text-shade;
+    padding: 0 $whitespace-horizontal $whitespace-vertical;
+    margin: $whitespace-vertical 0 0;
     cursor: pointer;
+    &:first-child {
+      padding-left: 0;
+    }
     &:hover {
       color: $text;
     }
@@ -475,14 +475,14 @@ h2 span {
     }
   }
   button[data-selected] {
-    color: $text;
+    font-weight: 800;
     cursor: text;
   }
 }
 
 .global-banner {
   position: relative;
-  padding-top: $whitespace-vertical;
+  padding: $whitespace-vertical 0 $whitespace-vertical * 0.5;
   margin: 0 $whitespace-horizontal * 2;
   @include font-core;
   border-bottom: $keyline;
@@ -506,43 +506,19 @@ h2 span {
       width: 53rem;
     }
   }
-  nav {
-    border-left: $keyline;
-    padding: 0 0 $whitespace-vertical * 0.5 $whitespace-horizontal;
-    a + a {
-      margin-left: $whitespace-horizontal;
-    }
-    @media (max-width: 1000px) {
-      width: calc(33% - #{$whitespace-horizontal});
-    }
-    @media (max-width: 700px) {
-      width: 100%;
-      border-left: none;
-      padding-left: 0;
-      text-align: right;
-    }
-  }
-  @media (max-width: 700px) {
-    p + nav {
-      position: absolute;
-      bottom: -3em;
-      a {
-        margin-right: $whitespace-horizontal;
-      }
-    }
-  }
 }
 
 /* HOMEPAGE */
 
 header {
   @include layout-block;
+  position: relative;
   grid-column: 2 / 5;
   grid-row: 1 / 2;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   justify-content: space-between;
-  align-items: stretch;
   padding: $padding;
   min-height: calc(#{$grid-row * 1.5} - #{$whitespace-vertical * 2});
   &.documentation {
@@ -554,10 +530,63 @@ header {
   & > :last-child {
     /*     margin-top: auto; */
   }
+
   @media (max-width: 700px) {
     .tagline {
-      padding: 20vh 0 15vh;
       margin-bottom: $whitespace-vertical * 2;
+    }
+  }
+  & > p {
+    position: relative;
+    padding: 15vh 0;
+    top: 1em;
+    text-align: center;
+    align-self: center;
+    @media (max-width: 700px) {
+      width: 100%;
+    }
+    .button {
+      position: relative;
+      @include font-feature;
+      display: inline-block;
+      top: 0.1em;
+      margin-right: 0.3em;
+      @media (max-width: 700px) {
+        display: block;
+        margin-bottom: 0.3em;
+      }
+    }
+  }
+  nav {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: $whitespace-vertical 0 $whitespace-vertical * 0.5
+      $whitespace-horizontal;
+    text-align: right;
+    @media (max-width: 700px) {
+      width: 100%;
+      border-left: none;
+      padding-left: 0;
+      text-align: right;
+    }
+    a + a {
+      margin-left: $whitespace-horizontal;
+      @media (max-width: 1000px) {
+        margin-left: $whitespace-horizontal * 2;
+      }
+      @media (max-width: 700px) {
+        margin-left: $whitespace-horizontal * 3;
+      }
+    }
+  }
+  @media (max-width: 700px) {
+    p + nav {
+      position: absolute;
+      bottom: -3em;
+      a {
+        margin-right: $whitespace-horizontal;
+      }
     }
   }
   .breadcrumb {
@@ -598,16 +627,11 @@ header {
       }
     }
   }
-  & > p {
-    text-align: center;
-    .button {
-      margin-left: $whitespace-horizontal;
-    }
-  }
 }
 
 .info {
   @include layout-block;
+  align-self: flex-end;
   grid-column: 2 / 5;
   @include grid-module;
   div {
@@ -961,7 +985,7 @@ footer {
     @include font-feature;
     grid-column: 2 / 5;
     @include grid-module;
-    min-height: calc(#{$grid-row} - #{$whitespace-vertical * 2});
+    min-height: calc(#{$grid-row * 0.75} - #{$whitespace-vertical * 2});
     div:nth-child(1) {
       grid-row: 1 / 2;
       grid-column: 1 / 2;
@@ -977,6 +1001,8 @@ footer {
       grid-column: 2 / 4;
     }
     @media (max-width: 700px) {
+      min-height: auto;
+      padding-bottom: $whitespace-vertical * 6;
       div:nth-child(1) {
         grid-column: 1 / 4;
         grid-row: 1 / 2;
@@ -1000,39 +1026,75 @@ footer {
       }
     }
   }
-  h3 {
-    @include font-feature;
-    padding-bottom: $whitespace-vertical;
-  }
   #contributors {
-    grid-column: 2 / 3;
-    margin-bottom: $whitespace-vertical;
-    $image-size: 5em;
-    ul {
-      list-style: none;
-      margin-bottom: $whitespace-vertical;
-      li {
-        padding-left: $image-size + 1em;
-        padding-bottom: $whitespace-vertical;
+    grid-column: 1 / 6;
+    @include grid-layout;
+    $image-size: 7em;
+    h3 {
+      grid-column: 2 / 3;
+      @include font-feature;
+      padding-bottom: $whitespace-vertical;
+    }
+    > div {
+      grid-column: 2 / 4;
+      grid-row: 2 / 3;
+      display: flex;
+      flex-direction: row;
+      justify-content: stretch;
+      flex-wrap: wrap;
+      @media (max-width: 1000px) {
+        grid-column: 2 / 5;
       }
-      img {
-        float: left;
-        position: relative;
-        margin-left: -1.1em - $image-size;
+    }
+    > p {
+      grid-column: 4 / 5;
+      grid-row: 2 / 3;
+      border-left: $keyline;
+      padding-left: $whitespace-horizontal;
+      @media (max-width: 1000px) {
+        grid-column: 2 / 5;
+        grid-row: 3 / 4;
+        border-left: none;
+        padding: $whitespace-vertical 0;
+      }
+    }
+    figure {
+      position: relative;
+      padding-left: calc(#{$image-size} + #{$whitespace-horizontal});
+      box-sizing: border-box;
+      width: 50%;
+      min-height: $image-size;
+      @media (max-width: 1000px) {
+        border-bottom: $keyline;
+      }
+      @media (max-width: 700px) {
+        width: 100%;
+        padding-left: calc(#{$image-size} + #{$whitespace-horizontal * 2});
+        & + figure {
+          margin-top: 1em;
+        }
+      }
+      div {
+        position: absolute;
+        top: 0.3em;
+        left: 0;
         width: $image-size;
-        height: $image-size;
-        border-radius: $image-size;
+        height: $image-size - 0.3em;
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter: grayscale(100%) brightness(120%);
+        mix-blend-mode: multiply;
+        z-index: 0;
       }
       h4 {
         font-weight: bold;
       }
       p {
-        max-width: 19em;
+        max-width: 15em;
       }
-      .link {
-        color: $text-shade;
-        margin-right: 0.3em;
-      }
+    }
+    .link {
+      margin-right: $whitespace-horizontal;
     }
   }
   #get-involved {
@@ -1058,8 +1120,9 @@ footer {
       margin-left: $whitespace-horizontal;
     }
     @media (max-width: 700px) {
+      padding: $whitespace-vertical * 6 0 $whitespace-vertical;
       grid-column: 2 / 5;
-      grid-row: 2 / 3;
+      grid-row: 3 / 4;
       justify-content: flex-start;
       a {
         margin-right: $whitespace-horizontal;
@@ -1070,7 +1133,13 @@ footer {
     grid-column: 2 / 5;
     grid-row: 3 / 4;
     padding-top: $whitespace-vertical;
-    margin-top: $whitespace-vertical;
     border-top: $keyline;
+    @media (max-width: 1000px) {
+      border-top: none;
+    }
+    @media (max-width: 700px) {
+      grid-row: 4 / 5;
+      border-top: $keyline;
+    }
   }
 }
